Expand JVector documentation (#547)